CalendarView is now functional. Displays a USA flag in the background for appropriate days. About to try to centre the month display at the top and add a message at the bottom.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_calendar_view">Calendar</string>
     <string name="months_prompt">Select a month...</string>
+    <string name="Mon">M</string>
+    <string name="Tue">T</string>
+    <string name="Wed">W</string>
+    <string name="Thu">T</string>
+    <string name="Fri">F</string>
+    <string name="Sat">S</string>
+    <string name="Sun">S</string>
 
     <string-array name="months">
         <item>January</item>
