--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
 
     <string name="app_name">USA Days Monitor</string>
     <string name="action_settings">Settings</string>
-    <string name="entering_canada">Entering Canada</string>
+    <string name="entering_canada">Entering CAN</string>
     <string name="entering_usa">Entering USA</string>
-    <string name="header_text_view">Number of days in the USA this calendar year:</string>
+    <string name="header_text_view">Number of days in the USA in the past 12 months:</string>
     <string name="num_days_text_view">0</string>
     <string name="currently_in">Currently in:</string>
     <string name="canada">Canada</string>
