Cloud storage is now functional! Still some work to do on functionality and UI before ready to release.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="cancel">Cancel</string>
     <string name="create_account">Create Account</string>
     <string name="create">Create</string>
-    <string name="username">Username:</string>
+    <string name="email">E-mail:</string>
     <string name="password">Password:</string>
     <string name="retype_password">Re-type password:</string>
     <string name="username_hint">username</string>
