--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,11 +48,12 @@
     <string name="none">None</string>
     <string name="title_activity_months_view">Days in USA</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="use_cloud_storage">Cloud Storage</string>
+    <string name="minimize_data_usage">Minimize Data Usage</string>
     <string name="account">Account: </string>
     <string name="none_yet">None yet</string>
     <string name="logout">Logout</string>
     <string name="login">Login</string>
+    <string name="login_"><u>Login</u></string>
     <string name="cancel">Cancel</string>
     <string name="create_account">Create Account</string>
     <string name="create">Create</string>
@@ -62,6 +63,17 @@
     <string name="username_hint">username</string>
     <string name="password_hint">password</string>
     <string name="title">Title</string>
+    <string name="already_have_account">Already have an account?</string>
+    <string name="no_account_yet">No account yet?</string>
+    <string name="create_one"><u>Create one</u></string>
+    <string name="ok">OK</string>
+    <string name="getting_started">Getting Started</string>
+    <string name="getting_started_message">Welcome to USA Days Monitor!\n
+        We keep track of how many\n
+        days you have been in the USA\n
+        during the past 12 months.\n
+        Create an account to get started!</string>
+    <string name="account_created_message">Account created successfully.</string>
     <string name="title_activity_create_account">Create Account</string>
     <string name="title_activity_login">LoginActivity</string>
 
