--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,14 +48,26 @@
     <string name="none">None</string>
     <string name="title_activity_months_view">Days in USA</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="minimize_data_usage">Minimize Data Usage</string>
+    <string name="use_mobile_data">Use Mobile Data</string>
+    <string name="use_location">Use Location</string>
     <string name="account">Account: </string>
     <string name="none_yet">None yet</string>
     <string name="logout">Logout</string>
+    <string name="change_password">Change Password</string>
+    <string name="old_password_hint">Old password:</string>
+    <string name="new_password_hint">New password:</string>
+    <string name="retype_new_password_hint">Re-type new password:</string>
     <string name="login">Login</string>
     <string name="login_"><u>Login</u></string>
+    <string name="whats_this_"><u>What\'s This?</u></string>
+    <string name="info_"><u>Info</u></string>
+    <string name="about_"><u>About USA Days Monitor</u></string>
     <string name="cancel">Cancel</string>
     <string name="create_account">Create Account</string>
+    <string name="edit_days">Edit Days</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="discard_changes">Discard Changes</string>
+    <string name="confirm">Confirm</string>
     <string name="create">Create</string>
     <string name="email">E-mail:</string>
     <string name="password">Password:</string>
@@ -66,6 +78,9 @@
     <string name="already_have_account">Already have an account?</string>
     <string name="no_account_yet">No account yet?</string>
     <string name="create_one"><u>Create one</u></string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="click_here"><u>Click here</u></string>
+    <string name="send_email">Send E-mail</string>
     <string name="ok">OK</string>
     <string name="getting_started">Getting Started</string>
     <string name="getting_started_message">Welcome to USA Days Monitor!\n
@@ -73,6 +88,29 @@
         days you have been in the USA\n
         during the past 12 months.\n
         Create an account to get started!</string>
+    <string name="forgot_password_message">Enter your e-mail address below\n
+        and you will receive an e-mail\n
+        containing your password.</string>
+    <string name="mobile_data_info_message">This setting determines whether the app uses your mobile data
+        (3G/4G/LTE) to regularly save your info in our cloud storage system. When OFF, your info will
+        only be saved to our cloud storage system when connected to wi-fi. This procedure uses very
+        minimal data, less than 1kB each time your info is saved. It is recommended to keep this ON
+        to prevent data loss if your phone is lost or damaged.</string>
+    <string name="location_info_message">This setting determines whether the app uses built-in location
+        services to automatically update your current country. If you turn this setting OFF, remember
+        to use the buttons in the main screen to update your country!</string>
+    <string name="app_info_message">USA Days Monitor, version 2.0.0:\n\nBackground:\nUS
+        tax laws allow non-residents in the USA for a maximum of 183 days during any
+        12-month period. This app was created as an easy way of tracking this.\n\nDevices
+        Supported:\nThis app was designed for Android smartphones, using location services
+        to automatically track your country. iOS devices may be supported in the
+        future.\n\nContact:\nGeneral inquiries and feedback can be sent to help@usadaysmonitor.com.</string>
+    <string name="save_changes_message">If you hit save, your recent changes will overwrite the previous data.
+        \n\nThis action cannot be undone.</string>
+    <string name="discard_changes_message">If you hit discard, your recent changes will be lost.
+        \n\nThis action cannot be undone.</string>
+    <string name="discard_or_save_changes_message">You have made changes to some days.
+    Would you like to save these changes or discard them?</string>
     <string name="account_created_message">Account created successfully.</string>
     <string name="title_activity_create_account">Create Account</string>
     <string name="title_activity_login">LoginActivity</string>
